--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,6 +40,7 @@ jobs:
       fail-fast: false
       matrix:
         database:
+          - 2017
           - 2019
           - 2022
           - azure-sql-edge
@@ -187,40 +188,30 @@ jobs:
         shell: powershell
         run: cargo test ${{matrix.features}}
 
-  cargo-test-macos:
-    runs-on: macos-15
+  # cargo-test-macos:
+  #   runs-on: macos-15
 
-    strategy:
-      fail-fast: false
-      matrix:
-        database:
-          - 2019
-        features:
-          - "--no-default-features --features=rustls,chrono,time,tds73,sql-browser-async-std,sql-browser-tokio,sql-browser-smol,integrated-auth-gssapi,rust_decimal,bigdecimal"
-          - "--no-default-features --features=vendored-openssl"
+  #   strategy:
+  #     fail-fast: false
+  #     matrix:
+  #       database:
+  #         - 2019
+  #       features:
+  #         - "--no-default-features --features=rustls,chrono,time,tds73,sql-browser-async-std,sql-browser-tokio,sql-browser-smol,integrated-auth-gssapi,rust_decimal,bigdecimal"
+  #         - "--no-default-features --features=vendored-openssl"
 
-    env:
-      TIBERIUS_TEST_CONNECTION_STRING: "server=tcp:localhost,1433;user=SA;password=<YourStrong@Passw0rd>;TrustServerCertificate=true"
+  #   env:
+  #     TIBERIUS_TEST_CONNECTION_STRING: "server=tcp:localhost,1433;user=SA;password=<YourStrong@Passw0rd>;TrustServerCertificate=true"
 
-    # steps:
-    #   - uses: actions/checkout@v2
+  #   steps:
+  #     - uses: actions/checkout@v2
 
-    #   - uses: actions-rs/toolchain@v1
+  #     - uses: actions-rs/toolchain@v1
 
-    #   - name: Install Docker on macOS
-    #     if: runner.os == 'macOS'
-    #     shell: bash
-    #     run: |
+  #     - uses: docker-practice/actions-setup-docker@master
 
-    #       # Install Docker CLI
-    #       brew install docker colima
-    #       colima start
-    #       # Verify installation
-    #       docker --version
-    #       docker info
+  #     - name: Start SQL Server ${{matrix.database}}
+  #       run: DOCKER_BUILDKIT=1 docker compose -f docker-compose.yml up -d mssql-${{matrix.database}}
 
-    #   - name: Start SQL Server ${{matrix.database}}
-    #     run: DOCKER_BUILDKIT=1 docker compose -f docker-compose.yml up -d mssql-${{matrix.database}}
-
-    #   - name: Run tests
-    #     run: cargo test ${{matrix.features}}
+  #     - name: Run tests
+  #       run: cargo test ${{matrix.features}}
